--- a/SECURE-iT-Yourself/MainPage/Beck_NC.xaml
+++ b/SECURE-iT-Yourself/MainPage/Beck_NC.xaml
@@ -10,10 +10,10 @@
     <Grid Height="600" Width="900">
         <Image Source="/Resources/Beck_Images/Background.jpg" Stretch="UniformToFill" Margin="-110,-75,-25,-50"/>
         <StackPanel x:Name="HomeContainer" Background="Transparent" Margin="-2,1,2,-1" Width="900" Height="600">
-                <DockPanel Name="TopContainer" Background="#A9D0E5" HorizontalAlignment="Left" Height="142" VerticalAlignment="Top" Width="900" RenderTransformOrigin="0.5,0.5" Margin="0,0,0,20" LastChildFill="False" >
-                    <Button Content="Back" Background="red" Foreground="white" Height="64" Opacity="0.6" VerticalAlignment="Top" Width="204" Margin="10 35 10 10" FontSize="20" Click="BackButton_Click" />
-                    <Label x:Name="lblTitle" Content="Network Configuration"   HorizontalAlignment="Left" VerticalAlignment="Top" Margin="35,35,0,0" Height="64" Width="417" FontSize="36" FontFamily="./#Renault BQ" FontWeight="Bold" FontStyle="Italic"/>
-                </DockPanel>
+            <DockPanel Name="TopContainer" Background="#A9D0E5" HorizontalAlignment="Left" Height="142" VerticalAlignment="Top" Width="900" RenderTransformOrigin="0.5,0.5" Margin="0,0,0,20" LastChildFill="False" >
+                <Button Content="Back" Background="red" Foreground="white" Height="64" Opacity="0.6" VerticalAlignment="Top" Width="204" Margin="10 35 10 10" FontSize="20" Click="BackButton_Click" />
+                <Label x:Name="lblTitle" Content="Network Configuration"   HorizontalAlignment="Left" VerticalAlignment="Top" Margin="35,35,0,0" Height="64" Width="417" FontSize="36" FontFamily="./#Renault BQ" FontWeight="Bold" FontStyle="Italic"/>
+            </DockPanel>
             <DockPanel x:Name="dockLowerInterface">
                 <!--Main table looking interface-->
                 <StackPanel Name="TableOfConfig" Background="White" HorizontalAlignment="Left" Height="412" VerticalAlignment="Top" Width="708" Margin="37,10,0,0" Grid.RowSpan="2">
@@ -29,13 +29,16 @@
                             <StackPanel>
                                 <DockPanel Name="Row1" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,10,0,0" Width="223">
-                                        <TextBlock Name="ConfigRow1" Background="#B7B1B0" TextAlignment="Center" Text="Open Unused Ports" Width="223" />
+                                        <TextBlock Name="ConfigRow1" Background="#B7B1B0" TextAlignment="Center" Text="Check on Ports" Width="223" />
                                     </StackPanel>
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,10,0,0" Width="243">
                                         <Button Name="DescRowBtn1" Background="#B7B1B0"  Content="▼" Width="243" MinHeight="60" Click="DescRowBtn1_Click"></Button>
                                         <TextBlock x:Name="DescRow1" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="Description of Unused ports" MaxWidth="243" Visibility="Collapsed"/>
                                     </StackPanel>
-                                    <Button Name="StatsRow1" Background="#B7B1B0" Margin="0,10,0,0" Content="Good" Width="158" Click="StatsRow1_Click" FontFamily="Apex New Book Italic" />
+                                    <Grid Background="#B7B1B0" Margin="0,10,0,0" Width="158" MaxHeight="60" >
+                                        <Button x:Name="StatsRow1"  Content="Good" Click="StatsRow1_Click" FontFamily="Apex New Book Italic" MaxHeight="60" Width="158" Margin="0,0,0,0"/>
+                                        <Image x:Name="PortCheckImg" Source="/Resources/Beck_Images/green-smiley-face-md.png" Margin="49,10,49,10" MaxHeight="60" Width="60"/>
+                                    </Grid>
                                 </DockPanel>
                                 <DockPanel Name="Row2" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="223">
@@ -45,7 +48,10 @@
                                         <Button Name="DescRowBtn2" Background="#B7B1B0"  Content="▼" Width="243" MinHeight="60" Click="DescRowBtn2_Click"></Button>
                                         <TextBlock x:Name="DescRow2" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="Description of proxy server" MaxWidth="243" Visibility="Collapsed" />
                                     </StackPanel>
-                                    <Button Name="StatsRow2" Background="#B7B1B0" Margin="0,0,0,0" Content="Average" Width="158" Click="StatsRow2_Click" />
+                                    <Grid Background="#B7B1B0" Margin="0,0,0,0" Width="158" MaxHeight="60" >
+                                        <Button Name="StatsRow2" Background="#B7B1B0" Margin="0,0,0,0" Content="" Width="158" Click="StatsRow2_Click" />
+                                        <Image x:Name="ProxyCheckingImg" Source="/Resources/Beck_Images/green-smiley-face-md.png" Margin="49,10,49,10" MaxHeight="60" Width="60"/>
+                                    </Grid>
                                 </DockPanel>
                                 <DockPanel Name="Row3" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="223">
@@ -55,17 +61,23 @@
                                         <Button Name="DescRowBtn3" Background="#B7B1B0"  Content="▼" Width="243" MinHeight="60" Click="DescRowBtn3_Click"></Button>
                                         <TextBlock Name="DescRow3" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="Firewall is a very important line of defence in the security system of you system." MaxWidth="243" Visibility="Collapsed"/>
                                     </StackPanel>
-                                    <Button Name="StatsRow3" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow3_Click" FontFamily="Apex New Book Italic" />
+                                    <Grid Background="#B7B1B0" Margin="0,0,0,0" Width="158" MaxHeight="60" >
+                                        <Button Name="StatsRow3" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow3_Click" FontFamily="Apex New Book Italic" />
+                                        <Image x:Name="FireWallImg" Source="/Resources/Beck_Images/green-smiley-face-md.png" Margin="49,10,49,10" MaxHeight="60" Width="60"/>
+                                    </Grid>
                                 </DockPanel>
                                 <DockPanel Name="Row4" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="223">
-                                        <TextBlock Name="ConfigRow4" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="ICMP echo on/off" Width="223" />
+                                        <TextBlock Name="ConfigRow4" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="ICMP Echo on/off" Width="223" />
                                     </StackPanel>
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="243">
                                         <Button Name="DescRowBtn4" Background="#B7B1B0"  Content="▼" Width="243" MinHeight="60" Click="DescRowBtn4_Click"></Button>
                                         <TextBlock Name="DescRow4" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="tion" MaxWidth="243" Visibility="Collapsed"/>
                                     </StackPanel>
-                                    <Button Name="StatsRow4" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow4_Click" />
+                                    <Grid Background="#B7B1B0" Margin="0,0,0,0" Width="158" MaxHeight="60" >
+                                        <Button Name="StatsRow4" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow4_Click" />
+                                        <Image x:Name="ICMPEchoImg" Source="/Resources/Beck_Images/green-smiley-face-md.png" Margin="49,10,49,10" MaxHeight="60" Width="60"/>
+                                    </Grid>
                                 </DockPanel>
                                 <DockPanel Name="Row5" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="223">
@@ -75,8 +87,12 @@
                                         <Button Name="DescRowBtn5" Background="#B7B1B0"  Content="▼" Width="243" MinHeight="60" Click="DescRowBtn5_Click"></Button>
                                         <TextBlock Name="DescRow5" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="" MaxWidth="243" Visibility="Collapsed"/>
                                     </StackPanel>
-                                    <Button Name="StatsRow5" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow5_Click" />
+                                    <Grid Background="#B7B1B0" Margin="0,0,0,0" Width="158" MaxHeight="60" >
+                                        <Button Name="StatsRow5" Background="#B7B1B0" Margin="0,0,0,0" Content="St" Width="158" Click="StatsRow5_Click" />
+                                        <Image x:Name="UpdatesImg" Source="/Resources/Beck_Images/green-smiley-face-md.png" Margin="49,10,49,10" MaxHeight="60" Width="60"/>
+                                    </Grid>
                                 </DockPanel>
+                                <!--Dont config below first-->
                                 <DockPanel Name="Row6" MinHeight="60" Margin="0,0,0.333,0">
                                     <StackPanel MinHeight="60" Background="#B7B1B0" Margin="10,0,0,0" Width="223">
                                         <TextBlock Name="ConfigRow6" Background="#B7B1B0" TextAlignment="Center" Margin="10,0,0,0" Text="Updates" Width="223" Height="60" VerticalAlignment="Bottom" FontStretch="ExtraExpanded"/>
@@ -156,7 +172,7 @@
                         <Grid Background="Gray" Opacity="0.5" Margin="-8,0,6,55"/>
                         <Label Foreground="white" Content="How well configured&#xA; is your device?" Height="78" Margin="6,-22,10,173" HorizontalAlignment="Center" ScrollViewer.VerticalScrollBarVisibility="Disabled" Grid.IsSharedSizeScope="True" VerticalContentAlignment="Center"/>
                         <Image x:Name="CurrentOverallStatImg" Height="55" Margin="37,51,0,123" HorizontalAlignment="Left" Width="55"/>
-                        <ProgressBar x:Name="OverallProgressBar" Height="7" Margin="12,123,8,99"/>
+                        <ProgressBar x:Name="OverallPB" Height="7" Margin="12,123,8,99"/>
                     </Grid>
 
 
