--- a/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_ViewSpecificCase.xaml
@@ -5,7 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="SY_ViewSpecificCase" Height="600" Width="800">
+        Title="SY_ViewSpecificCase" Height="600" Width="900">
+    <Window.Resources>
+        <Style x:Key="CenterAlignmentColumnHeaderStyle" TargetType="{x:Type DataGridColumnHeader}">
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontFamily" Value="/MainPage;component/Fonts/#Apex New Light" />
+            <Setter Property="Background" Value="#25315D" />
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="Black" />
+            <Setter Property="BorderThickness" Value="2" />
+        </Style>
+    </Window.Resources>
     <Grid Background="#39424D">
         <Grid>
             <Grid.RowDefinitions>
@@ -14,9 +25,9 @@
             </Grid.RowDefinitions>
 
 
-            <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+            <Button Click="Go_Back" Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
+                    <Image  Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
                     <Label FontSize="20" Foreground="White" FontFamily="/MainPage;component/Fonts/#Apex New Light">Back</Label>
                 </StackPanel>
             </Button>
@@ -36,10 +47,10 @@
                         
                     </Grid.ColumnDefinitions>
 
-                    <Canvas>
-                        <Rectangle  Height="45" Width="300" Fill="#25315D" Panel.ZIndex="0" ></Rectangle>
-                        <Label Name="Case_Label" Canvas.Left="80" Canvas.Top="7" Foreground="White" FontSize="20" FontFamily="/MainPage;component/Fonts/#Renault BQ">Case Name</Label>
-                    </Canvas>
+                    <Grid>
+                        <Rectangle HorizontalAlignment="Left"  Height="45" Width="360" Fill="#25315D" ></Rectangle>
+                        <Label HorizontalAlignment="Right" Margin="0,0,40,0" VerticalContentAlignment="Center" Name="Case_Label"  Foreground="White" FontSize="20" FontFamily="/MainPage;component/Fonts/#Renault BQ">Case Name</Label>
+                    </Grid>
 
                     <StackPanel Orientation="Horizontal" Grid.Column="2">
                         <Button Cursor="Hand" Height="40" Width="100" Background="ForestGreen" FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Search</Button>
@@ -48,24 +59,42 @@
                 </Grid>
 
                 <Grid Grid.Row="1" Margin="20,10,20,10">
-                    <DataGrid Background="#A9D0E5">
-                        <Style TargetType="{x:Type DataGridColumnHeader}">
-                            <Setter Property="VerticalContentAlignment" Value="Center" />
-                            <Setter Property="HorizontalAlignment" Value="Stretch" />
-                            <Setter Property="HorizontalContentAlignment" Value="Center" />
-                            <Setter Property="Height" Value="60" />
-                            <Setter Property="Width" Value="Auto" />
-                            <Setter Property="Margin" Value="0" />
-                            <Setter Property="FontSize" Value="50"/>
-                        </Style>
-                
-
+                    <DataGrid Name="LogTable" IsReadOnly="True" AutoGenerateColumns="False" Background="#A9D0E5">
                         <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Log_Name}" Width="245" Header="Log Name" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" >
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="FontSize" Value="21" />
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn>
+                            <DataGridTextColumn Binding="{Binding Log_Desc}" Width="300" Header="Log Description" HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}" >
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style TargetType="TextBlock">
 
-                            <DataGridTextColumn Header="Log Name" />
-                            <DataGridTextColumn  Header="Log Description" />
-                            <DataGridTextColumn  Header="View" />
-                            <DataGridTextColumn  Header="Options" />
+                                        <Setter Property="FontSize" Value="18" />
+                                        <Setter Property="TextWrapping" Value="Wrap" />
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn>
+                            <DataGridTemplateColumn Width="138" Header="View"  HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Click="View_Log" FontSize="18">View</Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Width="153" Header="Options"  HeaderStyle="{StaticResource CenterAlignmentColumnHeaderStyle}">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <Button Width="50" Content="Details" />
+                                            <Button Width="50" Content="Remove" />
+                                            <Button Width="50" Content="Edit" />
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
@@ -81,8 +110,6 @@
                     </Grid.ColumnDefinitions>
 
                     <Button Margin="0,0,10,0" Grid.Column="1" FontSize="25" Background="DarkSeaGreen" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Create Report</Button>
-                    
-                    
                 </Grid>
                 
             </Grid>
