--- a/SECURE-iT-Yourself/MainPage/SY_NewLogFile.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_NewLogFile.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="MainPage.SY_NetworkLogUpload"
+﻿<Window x:Class="MainPage.SY_NewLogFile"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="SY_NetworkLogUpload" Height="600" Width="900">
+        Title="SY_NewLogFile" Height="600" Width="900">
     <Grid Background="#404A56">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -54,24 +54,24 @@
 
                     </Grid.RowDefinitions>
 
-                    <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name: </Label>
+                    <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" FontSize="20" >Log Name:</Label>
                     <TextBox Name="Log_Name" FontSize="20" Grid.Column="2" Grid.Row="1"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Description: </Label>
+                    <Label Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Description:</Label>
                     <TextBox Name="Log_Desc" FontSize="11" TextWrapping="Wrap" Grid.Column="2" Grid.RowSpan="2" Height="100" Grid.Row="3"></TextBox>
 
-                    <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Log File: </Label>
+                    <Label Grid.Column="1" Grid.Row="6" FontSize="20" HorizontalAlignment="Right" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Log File:</Label>
                     <TextBox Name="ShowPath" FontSize="18" Grid.Column="2" Grid.Row="6"></TextBox>
 
                     <Button Click="upload_button" Grid.Column="3" Grid.Row="6" Width="80" Background="DarkSeaGreen">Upload</Button>
                     <Button Click="validation_button" Grid.Column="3" Grid.Row="7" Height="40" Width="80"  Background="DarkOliveGreen" >Next</Button>
 
-                    <Label Grid.Column="1" Width="144" Grid.Row="7" HorizontalContentAlignment="Right"  FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Format: </Label>
+                    <Label Grid.Column="1" Width="144" Grid.Row="7" HorizontalContentAlignment="Right"  FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light">Log Format:</Label>
                     <ComboBox Name="formatBox" HorizontalContentAlignment="Center" Grid.Column="2" Grid.Row="7" Height="40" >
                         <ComboBoxItem FontSize="20">Window Firewall</ComboBoxItem>
                         <ComboBoxItem FontSize="20">.PCAP</ComboBoxItem>
                     </ComboBox>
-                    
+
                 </Grid>
             </Grid>
         </Grid>
