--- a/SECURE-iT-Yourself/MainPage/SY_AddTagReport.xaml
+++ b/SECURE-iT-Yourself/MainPage/SY_AddTagReport.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainPage"
         mc:Ignorable="d"
-        Title="SY_AddTagReport" Height="600" Width="900">
+        Title="SECURe-It-Yourself" Height="600" Width="900">
     <Grid Background="#39424D">
         <Grid>
+            <Grid.Background>
+                <ImageBrush Opacity="0.3" ImageSource="pack://application:,,,/Resources/img/technology_cool.jpg" />
+            </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="400"/>
                 <ColumnDefinition Width="*" />
@@ -20,7 +23,7 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Button Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
+                <Button Click="Go_Back" Cursor="Hand" HorizontalAlignment="Left" Width="90" Height="40" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <Image Width="35" Height="35"  Source="pack://application:,,,/Resources/img/black_arrow.png"/>
                         <Label FontSize="20" FontFamily="/MainPage;component/Fonts/#Apex New Light" >Back</Label>
@@ -36,26 +39,64 @@
 
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="180" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="30" />
+                        <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <Label HorizontalAlignment="Right" FontSize="21" FontFamily="/MainPage;component/Fonts/#Apex New Light">Classification:</Label>
-                    <TextBox VerticalAlignment="Center" Grid.Column="1" Width="170" Height="30"></TextBox>
+                    <TextBox Name="TagName" VerticalAlignment="Center" Grid.Column="1" Width="180" Height="30"></TextBox>
                     <Label Grid.Row="2" HorizontalAlignment="Right" FontSize="21" FontFamily="/MainPage;component/Fonts/#Apex New Light">Description:</Label>
-                    <TextBox VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Width="170" Height="90"></TextBox>
+                    <TextBox Name="TagDescription" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2" Width="180" Height="140"></TextBox>
+                    <Label Grid.Row="4" HorizontalAlignment="Right" FontSize="21" FontFamily="/MainPage;component/Fonts/#Apex New Light">Time Start:</Label>
+                    <StackPanel Height="90" Grid.Column="1" Grid.Row="4">
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal" Height="30" >
+                            <Label  FontFamily="/MainPage;component/Fonts/#Apex New Light" FontSize="18">Date:</Label>
+                            <Rectangle Width="5" ></Rectangle>
+                            <DatePicker VerticalAlignment="Center" Width="100" Name="datePicker"></DatePicker>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" FontSize="18">Time:</Label>
+                            <Rectangle Width="10"/>
+                            <TextBox Name="StartHour" Width="25"/>
+                            <Label FontSize="18">:</Label>
+                            <TextBox Name="StartMinute" Width="25"/>
+                            <Label FontSize="18">:</Label>
+                            <TextBox Name="StartSeconds" Width="25"/>
+                        </StackPanel>
+                    </StackPanel>
 
+                    <Label Grid.Row="6" HorizontalAlignment="Right" FontSize="21" FontFamily="/MainPage;component/Fonts/#Apex New Light">Time End:</Label>
+                    <StackPanel Height="90" Grid.Column="1" Grid.Row="6">
+                        <StackPanel Margin="0,5,0,0" Orientation="Horizontal" Height="30" >
+                            <Label  FontFamily="/MainPage;component/Fonts/#Apex New Light" FontSize="18">Date:</Label>
+                            <Rectangle Width="5" ></Rectangle>
+                            <DatePicker VerticalAlignment="Center" Width="100" Name="datePickerEnd"></DatePicker>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label FontFamily="/MainPage;component/Fonts/#Apex New Light" FontSize="18">Time:</Label>
+                            <Rectangle Width="10"/>
+                            <TextBox Name="EndHour" Width="25"/>
+                            <Label FontSize="18">:</Label>
+                            <TextBox Name="EndMinute" Width="25"/>
+                            <Label FontSize="18">:</Label>
+                            <TextBox Name="EndSeconds" Width="25"/>
+                        </StackPanel>
+                    </StackPanel>
+
+                    <Button Margin="0,0,10,0" Grid.Row="7" Background="DarkSeaGreen" Click="Validation_Click" Grid.Column="2" Height="40" FontSize="18" VerticalAlignment="Top">Create</Button>
+                    
                 </Grid>
-
-
             </Grid>
         </Grid>
     </Grid>
